added teamId, limit and skip to get builds api and updated swagger and express validator
